--- a/src/styles/components/_Nav.scss
+++ b/src/styles/components/_Nav.scss
@@ -1,23 +1,35 @@
 @import '../utils/variables.scss';
 @import '../utils/mixims.scss';
 
-
 nav{
-    @include row-center;
-    justify-content: flex-start;
-    padding: 30px;
-    
+    width: 100%;
+    padding-bottom: 20px;
+    @include column-center;
 }
 
-.nav_links{
-    margin-left: 300px;
-    
+img{
+    width: 100%;
 }
+
 
 a{
     padding: 20px;
     text-decoration: none;
     color: $black;
-    font-size: 40px;
+    font-size: 20px;
     
+}
+
+
+
+@media screen and (min-width: 768px){
+    nav{
+        
+        @include row-center;
+        justify-content: space-around;       
+        padding: 30px;
+        & img {
+           width: 300px;
+        }
+    }
 }
