--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import './components/Footer';
 @import './components/Header';
 @import './components//Main';
+@import './components/Map';
 @import './components/Nav';
 
 body{
