--- a/src/styles/components/_Banner.scss
+++ b/src/styles/components/_Banner.scss
@@ -7,9 +7,17 @@
     width: 100%;
 }
 
+#banner_text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+
+
 
 button{
-
     display: inline-block;
     outline: 0;
     text-align: center;
