--- a/src/styles/components/_Contact.scss
+++ b/src/styles/components/_Contact.scss
@@ -1,7 +1,24 @@
 
 @import '../utils/variables.scss';
 
-.contact_form{
+
+#contact_form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 40px 20px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+.contact_form_input{
 
     color: rgba(0,0,0,.87);
     border-bottom-color: rgba(0,0,0,.42);
@@ -19,7 +36,7 @@
     border-bottom: 1px solid;
     border-radius: 4px 4px 0 0;
     background: rgb(245, 245, 245);
-    height: 56px;
+    
     :hover{
         border-bottom-color: $red;
         background: #ececec;
@@ -27,5 +44,39 @@
     :focus{
         border-color: $red;
     }
+
+}
+
+
+@media screen and (min-width: 768px){
+  #name_email{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    width: 100%;
+    height: 70px;
+    
+  }
+
+
+  #contact_form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 200px 20px;
+}
+  form{
+    width: 70%;
+  }
+
+  h1{
+    font-size: 2.5em;
+  }
+
+  p{
+    font-size: 1.5em;
+  }
+
 
 }
