--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -2,11 +2,25 @@
 @import '../utils/variables.scss';
 
 footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: $red;
     color: white;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+
+    & img{
+      width: 50px;
+    }
+
+    & a{
+      color: white;
+    }
   }
+
+ 
