--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -9,18 +9,37 @@ footer {
     color: white;
     text-align: center;
     display: flex;
-    flex-direction: row;
-    height: 150px;
+    flex-direction: column;
+    height: 400px;
     align-items: center;
     justify-content: center;
-
+  
     & img{
       width: 50px;
     }
 
     & a{
       color: white;
+      
     }
-  }
 
- 
+    
+    }
+  
+    .links{
+      display: flex;
+      flex-direction: column;
+    }
+
+
+    @media screen and (min-width: 768px){
+      footer{
+        flex-direction: row;
+        height: 150px;
+      }
+
+      .links{
+        display: flex;
+        flex-direction: row;
+      }
+  }
