--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -5,7 +5,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: $red;
+    background-color: $pink;
     color: white;
     text-align: center;
     display: flex;
